Closed Bug 880153 Opened 12 years ago Closed 12 years ago

WindowButtonsReservedWidth fallback is incorrect on Snow Leopard (10.6)

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: MattN, Assigned: mstange)

References

Details

(Whiteboard: [Australis:M7])

Attachments

(2 files)

It seems like we usually hit the WindowButtonsReservedWidth fallback value of 61 pixels wide but that's not enough for the caption buttons as they were larger prior to Lion. This is causing tabstrip buttons to overlap the zoom button. If I delete the -moz-appearance: -moz-window-button-box and re-add it in DOMi, it gets a value of 64px on SL. Based on the screenshot it would seem like 65px would be the comparable value. Any idea where the 1px difference comes from?
(In reply to Matthew N. [:MattN] from comment #0) > Based on the screenshot it would seem > like 65px would be the comparable value. Any idea where the 1px difference > comes from? Looks like on 10.7/10.8, the button rect includes 1px of margin at the right, and on 10.6 it didn't. These values are really up to the system, and it looks like that's just what the creators of the native window buttons chose to do. I think we should just use 64px as the fallback value on 10.6. I think the one pixel of gap difference isn't going to be noticeable, especially due to the rounded tab shape.
Attached patch patchSplinter Review
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Attachment #759023 - Flags: review?(smichaud)
Comment on attachment 759023 [details] [diff] [review] patch Looks fine to me.
Attachment #759023 - Flags: review?(smichaud) → review+
Whiteboard: [Australis:M7] → [Australis:M7][fixed-in-ux]
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Whiteboard: [Australis:M7][fixed-in-ux] → [Australis:M7]
Target Milestone: --- → mozilla28
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: