Bug 880153 - Fix -moz-window-button-box fallback width on 10.6. r=smichaud